--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "name": "Readable Marxists",
   "version": "0.1",
   "manifest_version": 2,
+  "icons": {
+    "16": "./img/16.png",
+    "48": "./img/48.png",
+    "128": "./img/128.png"
+  },
   "content_scripts": [
     {
       "matches": ["http://www.marxists.org/*", "https://www.marxists.org/*"],
