--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Readable Marxists",
   "version": "0.1",
+  "short_name": "Make marxists.org a little nicer",
   "manifest_version": 2,
   "icons": {
     "16": "./img/16.png",
